--- a/App/AndRemote/app/src/main/res/layout/activity_touchpad.xml
+++ b/App/AndRemote/app/src/main/res/layout/activity_touchpad.xml
@@ -8,9 +8,20 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.utopik.andremote.app.TouchpadActivity">
 
-    <TextView
-        android:text="@string/hello_world"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <com.utopik.andremote.app.TouchpadEventView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/button"
+        android:background="#35a9db" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Keyboard"
+        android:id="@+id/button"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
