Add Connection state

--- a/App/AndRemote/app/src/main/res/layout/activity_touchpad.xml
+++ b/App/AndRemote/app/src/main/res/layout/activity_touchpad.xml
@@ -6,22 +6,47 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.utopik.andremote.app.TouchpadActivity">
+    tools:context="com.utopik.andremote.app.TouchpadActivity"
+    android:onClick="showKeyboard">
 
     <com.utopik.andremote.app.TouchpadEventView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/button"
-        android:background="#35a9db" />
+        android:layout_above="@+id/buttonkeyboard"
+        android:background="#35a9db"
+        android:id="@+id/view" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Keyboard"
-        android:id="@+id/button"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:clickable="false"
+        android:id="@id/buttonkeyboard" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/editTextKeyboard"
+        android:layout_alignBottom="@+id/view"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:visibility="gone" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Disconnected"
+        android:id="@+id/textConnection"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:singleLine="false" />
 </RelativeLayout>
