--- a/App/AndRemote/app/src/main/res/menu/touchpad.xml
+++ b/App/AndRemote/app/src/main/res/menu/touchpad.xml
@@ -6,4 +6,8 @@
         android:title="@string/action_settings"
         android:orderInCategory="100"
         android:showAsAction="never" />
+    <item android:id="@+id/action_reconnect"
+        android:title="@string/action_reconnect"
+        android:orderInCategory="100"
+        android:showAsAction="never" />
 </menu>
