--- a/App/AndRemote/app/src/main/res/xml/preferences.xml
+++ b/App/AndRemote/app/src/main/res/xml/preferences.xml
@@ -7,10 +7,12 @@
         <EditTextPreference
             android:key= "prefHost"
             android:title="@string/pref_host"
-            android:summary="@string/pref_host_summary" />
+            android:summary="@string/pref_host_summary"
+            android:defaultValue="localhost"/>
         <EditTextPreference
             android:key= "prefPort"
             android:title="@string/pref_port"
-            android:summary="@string/pref_port_summary" />
+            android:summary="@string/pref_port_summary"
+            android:defaultValue="8080"/>
     </PreferenceCategory>
 </PreferenceScreen>
