--- a/App/AndRemote/app/src/main/res/layout/activity_touchpad.xml
+++ b/App/AndRemote/app/src/main/res/layout/activity_touchpad.xml
@@ -6,8 +6,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.utopik.andremote.app.TouchpadActivity"
-    android:onClick="showKeyboard">
+    tools:context="com.utopik.andremote.app.TouchpadActivity" >
 
     <com.utopik.andremote.app.TouchpadEventView
         android:layout_width="match_parent"
