--- a/App/AndRemote/app/src/main/res/layout/activity_touchpad.xml
+++ b/App/AndRemote/app/src/main/res/layout/activity_touchpad.xml
@@ -20,12 +20,10 @@
         android:layout_height="wrap_content"
         android:text="Keyboard"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
         android:clickable="false"
-        android:id="@id/buttonkeyboard" />
+        android:id="@id/buttonkeyboard"
+        android:layout_toRightOf="@+id/buttonClick"
+        android:layout_toLeftOf="@+id/buttonAltTab" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -55,9 +53,20 @@
         android:layout_height="wrap_content"
         android:text="Alt+Tab"
         android:id="@+id/buttonAltTab"
-        android:layout_above="@id/buttonkeyboard"
-        android:layout_alignRight="@+id/activeSurface"
-        android:layout_alignEnd="@+id/activeSurface"
         android:onClick="altTab"
-        android:singleLine="false" />
+        android:singleLine="false"
+        android:layout_below="@+id/activeSurface"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Click"
+        android:id="@+id/buttonClick"
+        android:longClickable="true"
+        android:layout_below="@+id/activeSurface"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
