--- a/App/AndRemote/app/src/main/res/xml/preferences.xml
+++ b/App/AndRemote/app/src/main/res/xml/preferences.xml
@@ -14,6 +14,11 @@
             android:title="@string/pref_port"
             android:summary="@string/pref_port_summary"
             android:defaultValue="8080"/>
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:title="@string/pref_sensitivity"
+        android:key="prefSensitivity">
         <ListPreference
             android:key= "prefSensitivity"
             android:title="Sensitivity"
